--- a/src/main/metadata/pages/AddressDisplayInlineEdit.page
+++ b/src/main/metadata/pages/AddressDisplayInlineEdit.page
@@ -133,8 +133,8 @@
                     <apex:inputField value="{!addressobj.TitleOfHonor__c}"/>  
                     <apex:inputField value="{!addressobj.Status__c}"/>
                     <apex:inputField value="{!addressobj.Preferred__c}"/>
-                    <apex:outputField value="{!addressobj.Temp_ZipCode__c}"/>
-                    <apex:outputField value="{!addressobj.Temp_Address__c}"/>
+                    <apex:inputField value="{!addressobj.Temp_ZipCode__c}"/>
+                    <apex:inputField value="{!addressobj.Temp_Address__c}"/>
                 </apex:pageBlockSection>
                 <!--buttons to save and cancel-->
                 <apex:pageBlockButtons location="bottom">
