--- a/src/main/metadata/pages/Create_Vehicle.page
+++ b/src/main/metadata/pages/Create_Vehicle.page
@@ -278,6 +278,7 @@
                         <apex:inputField value="{!vehicle.Length__c}"/>
                         <apex:inputField value="{!vehicle.Width__c}"/>
                         <apex:inputField value="{!vehicle.Weight__c}"/>
+                        <apex:inputField value="{!vehicle.ModelYear__c}"/>
                         <apex:inputField value="{!vehicle.National_Model__c}"/>
                         <apex:inputField value="{!vehicle.VehicleAge__c}"/>
                         <apex:inputField value="{!vehicle.Product_Model__c}"/>
@@ -287,7 +288,7 @@
                
                  <span ng-switch-when="MB">
                     <apex:pageBlockSection title="{!$Label.Date_Information}">
-                        
+                        <apex:inputField value="{!vehicle.FirstRegistrationDate__c}"/>
                         <apex:inputField value="{!vehicle.ProductionDate__c}"/>
                         <apex:inputField value="{!vehicle.NextServiceDate__c}"/>
                         <apex:inputField value="{!vehicle.NextInspectionDate__c}"/>
