--- a/src/main/metadata-au/pages/Lead_Address_Vehicle_Layout.page
+++ b/src/main/metadata-au/pages/Lead_Address_Vehicle_Layout.page
@@ -1,7 +1,7 @@
 <apex:page standardController="Lead__c" extensions="lead_Addresscontroller" id="pageid" showHeader="false" sidebar="false" showChat="false">
 <apex:form >  
     <apex:pageMessages id="showmsg"></apex:pageMessages>
-    <apex:pageBlock rendered="{!If(recordtypeid == 'Sales_Leads',true,false)}">  
+    <apex:pageBlock rendered="{!If(recordtypeid == 'Sales_Leads',If(marketdiscriminator == 'AU',true,false),false)}">  
         <apex:pageBlockSection columns="2" > 
              <apex:inputText label="Home Phone" value="{!HomePhone}"/> 
              <apex:inputText label="Address Line 1" value="{!addressline1}"/>
@@ -16,10 +16,30 @@
                       
         </apex:pageBlockSection>      
       <apex:pageBlockButtons location="bottom">
-      <apex:commandButton value="Save" action="{!Save}" styleClass="btn"/> 
-      </apex:pageblockButtons> 
+      	<apex:commandButton value="Save" action="{!Save}" styleClass="btn"/> 
+      </apex:pageblockButtons>
    </apex:pageBlock>
-        <apex:pageBlock rendered="{!If(recordtypeid == 'Fleet_Lead',true,false)}">
+    
+    <apex:pageBlock rendered="{!If(recordtypeid == 'Sales_Leads',If(marketdiscriminator == 'NZ',true,false),false)}">  
+        <apex:pageBlockSection columns="2" > 
+             <apex:inputText label="Home Phone" value="{!HomePhone}"/> 
+             <apex:inputText label="Address Line 1" value="{!addressline1}"/>
+             <apex:inputText label="Work Phone" value="{!workPhone}"/>
+             <apex:inputText label="Address Line 2" value="{!addressline2}"/>
+             <apex:inputText label="Email" value="{!email}"/>
+             <apex:inputText label="Suburb" value="{!suburb}"/>
+             <apex:inputText label="Mobile" value="{!mobileNum}"/>
+             <apex:inputText label="City" value="{!city}"/>
+             <apex:inputText label="Account Post Code" value="{!zipcode}"/> 
+             <apex:inputText label="Post Code" value="{!postcode}"/>
+                      
+        </apex:pageBlockSection>      
+      <apex:pageBlockButtons location="bottom">
+      	<apex:commandButton value="Save" action="{!Save}" styleClass="btn"/> 
+      </apex:pageblockButtons>
+   </apex:pageBlock>
+    
+        <apex:pageBlock rendered="{!If(recordtypeid == 'Fleet_Lead',If(marketdiscriminator == 'AU',true,false),false)}">
             <apex:pageBlockSection columns="2">
                 <apex:outputText label="Address Type" value="{!addr.Address_Type__c}"/> 
             	<apex:outputText label="Address Line 1" value="{!addressline1}"/>
@@ -27,6 +47,19 @@
                 <apex:outputText label="Address Line 2" value="{!addressline2}"/>
                 <apex:outputText label="Suburb" value="{!suburb}"/>
                 <apex:outputText label="State" value="{!addr.Province__c}"/> 
+                <apex:outputText label="Country" value="{!addr.Country__c}"/> 
+                <apex:outputText label="Post Code" value="{!postcode}"/>
+                <apex:outputText label="Status" value="{!addr.Status__c}"/> 
+            </apex:pageBlockSection>        
+        </apex:pageBlock>
+		<apex:pageBlock rendered="{!If(recordtypeid == 'Fleet_Lead',If(marketdiscriminator == 'NZ',true,false),false)}">
+            <apex:pageBlockSection columns="2">
+                <apex:outputText label="Address Type" value="{!addr.Address_Type__c}"/> 
+            	<apex:outputText label="Address Line 1" value="{!addressline1}"/>
+                <apex:outputText label="Company Name" value="{!companyname}"/>
+                <apex:outputText label="Address Line 2" value="{!addressline2}"/>
+                <apex:outputText label="Suburb" value="{!suburb}"/>
+                <apex:outputText label="City" value="{!city}"/> 
                 <apex:outputText label="Country" value="{!addr.Country__c}"/> 
                 <apex:outputText label="Post Code" value="{!postcode}"/>
                 <apex:outputText label="Status" value="{!addr.Status__c}"/> 
