--- a/src/main/metadata/pages/AddressDisplayInlineEdit.page
+++ b/src/main/metadata/pages/AddressDisplayInlineEdit.page
@@ -29,17 +29,17 @@
                         </apex:commandLink>                                                           
                         
                     </apex:column>
-                    
+                    <apex:column headerValue="{!$ObjectType.Address__c.fields.Name.Label}">
+                        <!--out put field to display address Name  --> 
+                        <apex:outputText value="{!row.Name}" style="width:9%; white-space:nowrap;">
+                        </apex:outputText>
+                    </apex:column>
                     <apex:column headerValue="{!$ObjectType.Address__c.fields.Address_Type__c.Label}">
                         <!--out put field to display address Type  --> 
                         <apex:outputField value="{!row.Address_Type__c}" style="width:7%; white-space:none;">
                         </apex:outputField>
                     </apex:column>
-                    <apex:column headerValue="{!$ObjectType.Address__c.fields.Name.Label}">
-                        <!--out put field to display address Type  --> 
-                        <apex:outputField value="{!row.Name}" style="width:7%; white-space:none;">
-                        </apex:outputField>
-                    </apex:column>
+                    
                     <apex:column headerValue="{!$ObjectType.Address__c.fields.ZipCode__c.Label}">
                         <apex:outputText value="{!row.ZipCode__c}"  style="width:8%; white-space:none;">                              
                         </apex:outputText>
