--- a/src/main/metadata-au/pages/Lead_Add_MultiBrand.page
+++ b/src/main/metadata-au/pages/Lead_Add_MultiBrand.page
@@ -11,8 +11,12 @@
             <apex:pageBlockSection id="refreshdata" columns="4">
                 <apex:repeat value="{!wrappermultibrand}" var="wrap" id="wrapmulbrand">
                     <apex:outputLabel value="Brand">
-                        <apex:selectList value="{!wrap.vehiclebrand}" size="1">
-                            <apex:selectOptions value="{!brands}" /> 
+                        <apex:selectList value="{!wrap.vehiclebrand}" size="1">                           
+							<apex:selectOptions value="{!brands[0]}" />
+                            <apex:selectOptions value="{!brands[1]}" rendered="{!if(brands.size>1000,true,false)}"/>
+                            <apex:selectOptions value="{!brands[2]}" rendered="{!if(brands.size>2000,true,false)}"/>
+                            <apex:selectOptions value="{!brands[3]}" rendered="{!if(brands.size>3000,true,false)}"/>
+							<apex:selectOptions value="{!brands[4]}" rendered="{!if(brands.size>4000,true,false)}"/>                                                       
                         </apex:selectList> 
                     </apex:outputLabel>
                     <apex:outputLabel value="Vehicle Model">
