--- a/src/main/metadata-au/components/eoc_links.component
+++ b/src/main/metadata-au/components/eoc_links.component
@@ -1,16 +1,17 @@
 <apex:component controller="MakeUpdateLinkControl" access="global">
 <apex:attribute name="leadId" type="String" description="Lead account Id"/>
+<apex:attribute name="leadName" type="String" description="Lead account Name"/>
 <b>Dealer Responses</b><br/>
 Please click on one of the following to email back a response:<br/>
 <br/>
-<a href="Mailto:{!emailserviceAddress}?Subject={!LeadId}:Contact Attempt Made:">Contact Attempt Made</a><br/>
-<a href="Mailto:{!emailserviceAddress}?Subject={!LeadId}:Quote Provided:">Quote Provided</a><br/>
-<a href="Mailto:{!emailserviceAddress}?Subject={!LeadId}:Quote Accepted:">Quote Accepted</a> <br/>
-<a href="Mailto:{!emailserviceAddress}?Subject={!LeadId}:Sold Vehicle:">Sold Vehicle</a> <br/>
-<a href="Mailto:{!emailserviceAddress}?Subject={!LeadId}:Sold Vehicle and Finance:">Sold Vehicle and Finance</a><br/>
-<a href="Mailto:{!emailserviceAddress}?Subject={!LeadId}:Sold Finance:">Sold Finance</a><br/>
-<a href="Mailto:{!emailserviceAddress}?Subject={!LeadId}:Refinanced:">Refinanced</a><br/>
-<a href="Mailto:{!emailserviceAddress}?Subject={!LeadId}:Closed:Pay out:">Closed – Payout </a> <br/>
-<a href="Mailto:{!emailserviceAddress}?Subject={!LeadId}:Closed:Lost Competitor:">Closed – Lost Competitor</a><br/>
-<a href="Mailto:{!emailserviceAddress}?Subject={!LeadId}:Closed:Vehicle Hand Back:">Closed – Vehicle Hand Back</a><br/>
+<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject={!LeadName}:{!LeadId}:Contact Attempt Made:">Contact Attempt Made</a><br/>
+<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject={!LeadName}:{!LeadId}:Quote Provided:">Quote Provided</a><br/>
+<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject={!LeadName}:{!LeadId}:Quote Accepted:">Quote Accepted</a> <br/>
+<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject={!LeadName}:{!LeadId}:Sold Vehicle:">Sold Vehicle</a> <br/>
+<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject={!LeadName}:{!LeadId}:Sold Vehicle and Finance:">Sold Vehicle and Finance</a><br/>
+<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject={!LeadName}:{!LeadId}:Sold Finance:}">Sold Finance</a><br/>
+<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject={!LeadName}:{!LeadId}:Refinanced:">Refinanced</a><br/>
+<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject={!LeadName}:{!LeadId}:Closed:Pay out:">Closed – Payout </a> <br/>
+<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject={!LeadName}:{!LeadId}:Closed:Lost Competitor:">Closed – Lost Competitor</a><br/>
+<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject={!LeadName}:{!LeadId}:Closed:Vehicle Hand Back:">Closed – Vehicle Hand Back</a><br/>
 </apex:component>
