Changes related to SFDCAU-655

--- a/src/main/metadata-au/components/eoc_links.component
+++ b/src/main/metadata-au/components/eoc_links.component
@@ -4,14 +4,14 @@
 <b>Dealer Responses</b><br/>
 Please click on one of the following to email back a response:<br/>
 <br/>
-<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject={!LeadName}:{!LeadId}:Contact Attempt Made:">Contact Attempt Made</a><br/>
-<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject={!LeadName}:{!LeadId}:Quote Provided:">Quote Provided</a><br/>
-<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject={!LeadName}:{!LeadId}:Quote Accepted:">Quote Accepted</a> <br/>
-<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject={!LeadName}:{!LeadId}:Sold Vehicle:">Sold Vehicle</a> <br/>
-<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject={!LeadName}:{!LeadId}:Sold Vehicle and Finance:">Sold Vehicle and Finance</a><br/>
-<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject={!LeadName}:{!LeadId}:Sold Finance:}">Sold Finance</a><br/>
-<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject={!LeadName}:{!LeadId}:Refinanced:">Refinanced</a><br/>
-<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject={!LeadName}:{!LeadId}:Closed:Pay out:">Closed – Payout </a> <br/>
-<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject={!LeadName}:{!LeadId}:Closed:Lost Competitor:">Closed – Lost Competitor</a><br/>
-<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject={!LeadName}:{!LeadId}:Closed:Vehicle Hand Back:">Closed – Vehicle Hand Back</a><br/>
+<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject=Lead No.{!LeadName}:{!LeadId}:Contact Attempt Made:">Contact Attempt Made</a><br/>
+<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject=Lead No.{!LeadName}:{!LeadId}:Quote Provided:">Quote Provided</a><br/>
+<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject=Lead No.{!LeadName}:{!LeadId}:Quote Accepted:">Quote Accepted</a> <br/>
+<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject=Lead No.{!LeadName}:{!LeadId}:Sold Vehicle:">Sold Vehicle</a> <br/>
+<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject=Lead No.{!LeadName}:{!LeadId}:Sold Vehicle and Finance:">Sold Vehicle and Finance</a><br/>
+<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject=Lead No.{!LeadName}:{!LeadId}:Sold Finance:">Sold Finance</a><br/>
+<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject=Lead No.{!LeadName}:{!LeadId}:Refinanced:">Refinanced</a><br/>
+<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject=Lead No.{!LeadName}:{!LeadId}:Closed:Pay out:">Closed – Payout </a> <br/>
+<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject=Lead No.{!LeadName}:{!LeadId}:Closed:Lost Competitor:">Closed – Lost Competitor</a><br/>
+<a href="Mailto:{!emailserviceAddress}?cc={!CustomerCareEmail}&Subject=Lead No.{!LeadName}:{!LeadId}:Closed:Vehicle Hand Back:">Closed – Vehicle Hand Back</a><br/>
 </apex:component>
