--- a/src/main/metadata-au/pages/LeadProductDetailsInput.page
+++ b/src/main/metadata-au/pages/LeadProductDetailsInput.page
@@ -12,10 +12,16 @@
                 <apex:repeat value="{!wrappermultibrand}" var="wrap" id="wrapmulbrand">
                                        
                     <apex:inputText value="{!wrap.vechmodel}" label="No. of Vehicles" /> 
-                        <apex:selectList value="{!wrap.vehiclebrand}"  label="Model" size="1">
-                            <apex:selectOptions value="{!brands}"  /> 
-                        </apex:selectList>
-                        <apex:inputText value="{!wrap.vechquanty}" label="Vehicle Model Details"/>
+                        <apex:outputLabel value="Brand">
+                        <apex:selectList value="{!wrap.vehiclebrand}" size="1">                           
+                            <apex:selectOptions value="{!brands[0]}" rendered="{!if(brands.size>0,true,false)}"/>
+                            <apex:selectOptions value="{!brands[1]}" rendered="{!if(brands.size>1,true,false)}"/>
+                            <apex:selectOptions value="{!brands[2]}" rendered="{!if(brands.size>2,true,false)}"/>
+                            <apex:selectOptions value="{!brands[3]}" rendered="{!if(brands.size>3,true,false)}"/>
+                            <apex:selectOptions value="{!brands[4]}" rendered="{!if(brands.size>4,true,false)}"/>                                                       
+                        </apex:selectList> 
+                    </apex:outputLabel>                        
+                    <apex:inputText value="{!wrap.vechquanty}" label="Vehicle Model Details"/>
                     <apex:commandButton action="{!addrow}" value="+" reRender="refreshdata,pgmasg" id="thebutton"/>
                 </apex:repeat>           
             </apex:pageBlockSection> 
