--- a/src/main/metadata-au/pages/Lead_Add_MultiBrand.page
+++ b/src/main/metadata-au/pages/Lead_Add_MultiBrand.page
@@ -11,7 +11,7 @@
             <apex:pageBlockSection id="refreshdata" columns="4">
                 <apex:repeat value="{!wrappermultibrand}" var="wrap" id="wrapmulbrand">
                     <apex:outputLabel value="Brand">
-                        <apex:selectList value="{!wrap.vehiclebrand}" >                           
+                        <apex:selectList value="{!wrap.vehiclebrand}" size="1">                           
                             <apex:selectOptions value="{!brands[0]}" rendered="{!if(brands.size>0,true,false)}"/>
                             <apex:selectOptions value="{!brands[1]}" rendered="{!if(brands.size>1,true,false)}"/>
                             <apex:selectOptions value="{!brands[2]}" rendered="{!if(brands.size>2,true,false)}"/>
