Changes in SFDCAU-739

--- a/src/main/metadata-au/pages/AccountContactInformation.page
+++ b/src/main/metadata-au/pages/AccountContactInformation.page
@@ -9,8 +9,13 @@
         <tr>        
             <td></td> 
             <td></td>
-            <th>Status</th>        
-            <th>Opt-in MBAuP</th>    
+            <th>Status</th>           
+            <apex:outputPanel rendered="{!IF($Profile.Name !='Head Office - Marketing', True , False)}">
+            	<th>Opt-in MBAup</th>
+            </apex:outputPanel>
+            <apex:outputPanel rendered="{!IF($Profile.Name =='Head Office - Marketing', True , False)}">
+            	<th>Opt-in MBNZ</th>
+            </apex:outputPanel>
             <th>Opt-in MBFS</th>        
             <th>Preferred</th> 
             <th>Last Modified By</th>        
